fixed sticky header nav hover for both a and em correct contrast

--- a/css/layout.css
+++ b/css/layout.css
@@ -86,7 +86,7 @@ svg {
   width: 100%;
   top: 0;
   left: 0;
-  height: 70px;
+  height: 200px;
   background: rgba(255, 255, 255, 0.85);
   z-index: 3;
   overflow: hidden;
@@ -370,7 +370,7 @@ xnavigation
   position: relative;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 50%;
   text-align: center;
   -webkit-transition: background-color 0.2s;
   -moz-transition: background-color 0.2s;
@@ -388,6 +388,7 @@ xnavigation
 .cd-nav li.cd-selected a em {
   /* on hover or if selected - change text and icon color*/
   color: #16a085;
+  background-color: #000;
 }
 .cd-nav li.cd-selected a span {
   /* on hover or if selected - change text and icon color*/
@@ -444,6 +445,9 @@ xnavigation
   transition: color 0.2s;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+.cd-nav a:hover em {
+  color: #16a085;
 }
 @media only screen and (min-width: 700px) {
   .cd-nav li {
